@@ -104,7 +104,8 @@ class MapList(object):
 	@classmethod
 	def load_all_from_dir(cls,dir):
 		for f in os.listdir(dir):
-			cls.new_from_file(dir+f)
+			if not os.path.isdir(dir+f):
+				cls.new_from_file(dir+f)
 
 	@classmethod
 	def new_from_file(cls, filename):
